# SPE-Reading-Elective

./: Jenkinsfile  docker-compose.yml  k6-python-vu10-run1.json  pipeline.yml  stress-test.js  syscall_profile.sh
ansible/: inventory.ini  pipeline.yml
lanes/python/: .Dockerfile.un~  .notes_feb2_26.txt.un~  Dockerfile  Dockerfile~  dockerfile_explanation.txt  notes_feb2_26.txt  notes_feb2_26.txt~  server.py
lanes/rust/: Cargo.toml  Dockerfile  dockerfile_explanation.txt  notes_feb_2_26.txt
lanes/rust/src/: main.rs
lanes/wasm/: Cargo.toml  Dockerfile  dockerfile_explanation.txt  infer.js  package.json  server.js  spin.toml
lanes/wasm/src/: lib.rs
model_artifacts/: classes.json  model.onnx  scaler.json  test_samples.json
model_artifacts_other/: classes.json  model.onnx  scaler.json  test_samples.json
python-app/: Dockerfile  main.py  requirements.txt
rust-app/: Cargo.toml  Dockerfile
rust-app/src/: main.rs
wasm-app/: Cargo.toml  Dockerfile  spin.toml
wasm-app/src/: lib.rs
