[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web  = "4"

# ONNX Runtime (tabular only — no image feature needed)
ort        = { version = "2.0.0-rc.11", features = ["ndarray"] }

# Matrix math (replaces NumPy)
ndarray    = "0.15"

# JSON serialisation
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime (pulled in by actix; pin to avoid resolver conflicts)
tokio      = { version = "1", features = ["full"] }

# Logging
env_logger = "0.10"
log        = "0.4"

# Pin time to avoid ORT resolver conflict (keep from original)
time       = "=0.3.36"

# Removed: actix-multipart, image, futures-util, uuid
# — none are needed for a tabular JSON API