[package]
name = "wasm-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path       = "src/lib.rs"

[dependencies]
# WASI/Spin HTTP component SDK
spin-sdk   = "3.0.1"

# Pure-Rust ONNX inference engine (no C FFI — compiles to WASM cleanly)
# tract runs entirely in the WASI sandbox; no ORT C++ lib needed
tract-onnx = "0.21.7"

# Lazy static init (model loaded on first request, not at cold-start)
once_cell  = "1.19"

# JSON
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow     = "1.0"

# tract re-exports its own ndarray; import it explicitly so Array2 is in scope
tract-ndarray = "0.21.7"