[package]
name    = "spe-rust-lane"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spe-rust-lane"
path = "src/main.rs"

[dependencies]
axum         = { version = "0.7", features = ["json"] }
tokio        = { version = "1",   features = ["full"] }
serde        = { version = "1",   features = ["derive"] }
serde_json   = "1"
ort          = { version = "2.0.0-rc.10", features = ["load-dynamic"] }
ndarray      = "0.15"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
strip       = true