[package]
name = "wasm-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
once_cell = "1.19"
spin-sdk = "3.0.1"
tract-onnx = "0.21.7"
anyhow = "1.0"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"